# kaggle_practice

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  jupyter.sh  pyproject.toml  requirements.txt
house_prices_advanced_regression_techniques/src/: house_price_calc_model_v1.ipynb
house_prices_advanced_regression_techniques/src_analysis/: eda_memo_v1.md  house_price_EDA_v1.ipynb  house_price_preprocess_linear_v1.ipynb  house_price_preprocess_tree_v1.ipynb  house_price_preprocess_v1.ipynb
projects/house_prices_advanced_regression_techniques/src/: house_price_calc_model_v1.ipynb
projects/house_prices_advanced_regression_techniques/src_analysis/: eda_memo_v1.md  house_price_preprocess_tree_v1.ipynb
projects/jpx/: README.md  pyproject.toml
projects/jpx/docs/source/: conf.py  index.rst
projects/jpx/src/: setup.py
projects/jpx/src/jpx/: __init__.py  __main__.py  settings.py
projects/jpx/src/tests/: test_run.py
projects/sandbox/house_price/: README.md  pyproject.toml
projects/sandbox/house_price/src/: setup.py
projects/sandbox/play_sandbox/: README.md  pyproject.toml
projects/sandbox/pytorch_tutorial/: README.md  pyproject.toml
projects/titanic/src_analysis/: titanic_EDA_v1.ipynb  titanic_preprocess_v1.ipynb
projects/utils/: ds_utils.py
root_jupyter/: migrated
root_jupyter/lab/workspaces/: auto-e-7da1.jupyterlab-workspace  default-37a8.jupyterlab-workspace
root_kaggle/: kaggle.json
titanic/src/: titanic_calc_model_v1.ipynb
titanic/src_analysis/: titanic_EDA_v1.ipynb  titanic_preprocess_v1.ipynb
utils/: my_ds_tools.py
(+3865 files in other folders)
