[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["shotai07"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
sklearn = "^0.0"
jupyterlab = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
japanize-matplotlib = "^1.1.3"
pycaret = "^2.3.9"
mlflow = "^1.24.0"
kedro = "^0.18.0"
lightgbm = "^3.3.2"
kedro-viz = "^4.4.0"
black = "^22.3.0"
jupyterlab-code-formatter = "^1.4.10"
lckr-jupyterlab-variableinspector = "^3.0.9"
jupyterlab-widgets = "^1.1.0"
ipywidgets = "^7.7.0"
kaggle = "^1.5.12"
sweetviz = "^2.1.3"
pandas-profiling = "^3.1.0"
optuna = "^2.10.0"
autoviz = "^0.1.38"
openpyxl = "^3.0.9"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
torchtext = "^0.12.0"
prophet = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
